--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "css": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
     },
     "dependencies": {
+        "framer-motion": "^11.11.17",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.28.0"
